# cargo-embed-workspace

./: Cargo.toml  README.md
.cargo/: config
common/: Cargo.toml
common/src/: lib.rs
firmware/: Cargo.toml  Embed.toml  memory.x
firmware/src/: main.rs
