[package]
name = "firmware"
version = "0.1.0"
authors = ["Zac Berkowitz"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = {path = "../common" }
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
stm32l0 = {version = "^0.12", features = ["stm32l0x1", "rt"]}
panic-halt = "0.2.0"